--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="col-content">
 <div class="tsd-page-title">
 <h2>graphdb-utils</h2></div>
-<div class="tsd-panel tsd-typography"><a id="md:graphdb-utils" class="tsd-anchor"></a><h1><a href="#md:graphdb-utils">graphdb-utils</a></h1><a id="md:docs" class="tsd-anchor"></a><h2><a href="#md:docs"><a href="https://csse-uoft.github.io/graphdb-utils/modules.html">Docs</a></a></h2></div></div>
+<div class="tsd-panel tsd-typography"><a id="md:graphdb-utils" class="tsd-anchor"></a><h1><a href="#md:graphdb-utils">graphdb-utils</a></h1><p>GraphDB utils is an object data modelling tool that has similar programing interfaces as <code>Mongoose</code>.</p>
+<a id="md:programing-interfaces" class="tsd-anchor"></a><h2><a href="#md:programing-interfaces"><a href="https://csse-uoft.github.io/graphdb-utils/modules.html">Programing Interfaces</a></a></h2><a id="md:usages-and-examples" class="tsd-anchor"></a><h2><a href="#md:usages-and-examples"><a href="examples/README.md">Usages and examples</a></a></h2></div></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -37,7 +38,8 @@
 <li><a href="#md:graphdb-utils"><span>graphdb-<wbr/>utils</span></a></li>
 <li>
 <ul>
-<li><a href="#md:docs"><span>Docs</span></a></li></ul></li></ul></li></ul></div></details></div>
+<li><a href="#md:programing-interfaces"><span>Programing <wbr/>Interfaces</span></a></li>
+<li><a href="#md:usages-and-examples"><span>Usages and examples</span></a></li></ul></li></ul></li></ul></div></details></div>
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="modules.html" class="current"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-namespace)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-4-path"></rect><path d="M9.33 16V7.24H10.77L13.446 14.74C13.43 14.54 13.41 14.296 13.386 14.008C13.37 13.712 13.354 13.404 13.338 13.084C13.33 12.756 13.326 12.448 13.326 12.16V7.24H14.37V16H12.93L10.266 8.5C10.282 8.692 10.298 8.936 10.314 9.232C10.33 9.52 10.342 9.828 10.35 10.156C10.366 10.476 10.374 10.784 10.374 11.08V16H9.33Z" fill="var(--color-text)" id="icon-4-text"></path></svg><span>graphdb-<wbr/>utils</span></a>
 <ul class="tsd-small-nested-navigation">
