--- a/classes/GraphDBDocumentArray.html
+++ b/classes/GraphDBDocumentArray.html
@@ -25,7 +25,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">GraphDBDocumentArray</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/926d238/src/graphDBDocumentArray.js#L43">src/graphDBDocumentArray.js:43</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5251dfd/src/graphDBDocumentArray.js#L44">src/graphDBDocumentArray.js:44</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -840,7 +840,7 @@ If the array is empty, undefined is returned and the array is not modified.</p>
 <section class="tsd-panel tsd-member"><a id="populate" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>populate</span><a href="#populate" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures">
-<li class="tsd-signature tsd-anchor-link" id="populate.populate-1"><span class="tsd-kind-call-signature">populate</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">path</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span><a href="#populate.populate-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="populate.populate-1"><span class="tsd-kind-call-signature">populate</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">path</span>, <span class="tsd-kind-parameter">ignoreTransaction</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span><a href="#populate.populate-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>populate a single property for every document.</p>
 </div>
@@ -850,14 +850,18 @@ If the array is empty, undefined is returned and the array is not modified.</p>
 <li>
 <h5><span class="tsd-kind-parameter">path</span>: <span class="tsd-signature-type">string</span></h5>
 <div class="tsd-comment tsd-typography"><p>e.g. &#39;primary_contact&#39;</p>
+</div></li>
+<li>
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-parameter">ignoreTransaction</span>: <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></h5>
+<div class="tsd-comment tsd-typography"><p>whether to ignore transaction</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/926d238/src/graphDBDocumentArray.js#L50">src/graphDBDocumentArray.js:50</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5251dfd/src/graphDBDocumentArray.js#L52">src/graphDBDocumentArray.js:52</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="populateMultiple" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>populate<wbr/>Multiple</span><a href="#populateMultiple" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures">
-<li class="tsd-signature tsd-anchor-link" id="populateMultiple.populateMultiple-1"><span class="tsd-kind-call-signature">populate<wbr/>Multiple</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">paths</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span><a href="#populateMultiple.populateMultiple-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="populateMultiple.populateMultiple-1"><span class="tsd-kind-call-signature">populate<wbr/>Multiple</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">paths</span>, <span class="tsd-kind-parameter">ignoreTransaction</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span><a href="#populateMultiple.populateMultiple-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Populate multiple properties for every document.
 Breadth first populate for combining queries.</p>
@@ -868,10 +872,14 @@ Breadth first populate for combining queries.</p>
 <li>
 <h5><span class="tsd-kind-parameter">paths</span>: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h5>
 <div class="tsd-comment tsd-typography"><p>e.g. [&#39;primary_contact&#39;, &#39;organization&#39;]</p>
+</div></li>
+<li>
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-parameter">ignoreTransaction</span>: <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></h5>
+<div class="tsd-comment tsd-typography"><p>whether to ignore transaction</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="GraphDBDocumentArray.html" class="tsd-signature-type tsd-kind-class">GraphDBDocumentArray</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/926d238/src/graphDBDocumentArray.js#L60">src/graphDBDocumentArray.js:60</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5251dfd/src/graphDBDocumentArray.js#L63">src/graphDBDocumentArray.js:63</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="push" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>push</span><a href="#push" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -1285,7 +1293,7 @@ To Plain JS Object, not a string.</p>
 </div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/926d238/src/graphDBDocumentArray.js#L213">src/graphDBDocumentArray.js:213</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/csse-uoft/graphdb-utils/blob/5251dfd/src/graphDBDocumentArray.js#L216">src/graphDBDocumentArray.js:216</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="toLocaleString" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>to<wbr/>Locale<wbr/>String</span><a href="#toLocaleString" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
