--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <div class="tsd-page-title">
 <h2>graphdb-utils</h2></div>
 <div class="tsd-panel tsd-typography"><a id="md:graphdb-utils" class="tsd-anchor"></a><h1><a href="#md:graphdb-utils">graphdb-utils</a></h1><p>GraphDB utils is an object data modelling tool that has similar programing interfaces as <code>Mongoose</code>.</p>
-<a id="md:programing-interfaces" class="tsd-anchor"></a><h2><a href="#md:programing-interfaces"><a href="https://csse-uoft.github.io/graphdb-utils/modules.html">Programing Interfaces</a></a></h2><a id="md:usages-and-examples" class="tsd-anchor"></a><h2><a href="#md:usages-and-examples"><a href="https://github.com/csse-uoft/graphdb-utils/blob/main/examples/README.md">Usages and examples</a></a></h2></div></div>
+<a id="md:programing-interfaces" class="tsd-anchor"></a><h2><a href="#md:programing-interfaces"><a href="https://csse-uoft.github.io/graphdb-utils/modules.html">Programing Interfaces</a></a></h2><a id="md:usages-and-examples" class="tsd-anchor"></a><h2><a href="#md:usages-and-examples"><a href="examples">Usages and examples</a></a></h2><ul>
+<li><a href="examples/README.md">Getting Started</a></li>
+<li><a href="examples/datatypes.md">Available Datatypes</a></li>
+<li><a href="examples/lazy-mode-evaluation.md">Lazy Model Evaluation</a></li>
+<li><a href="examples/transaction.md">Transaction Support</a></li>
+</ul>
+</div></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
